--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-psycopg2
-flask
+click==6.7
+Flask==1.0.2
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+psycopg2-binary==2.7.4
+Werkzeug==0.14.1
